RESOURCES/style.css
/* ... */
.navbar .navbar-nav li a {
    font-family: "Montserrat", Helvetica, Arial, sans-serif;
    height: 50px;
    display: block;
    letter-spacing: .5px;
    line-height: 50px;
    margin: 0 0 0 30px;
    padding: 0;
    color: rgba(255, 255, 255, .7);
    -webkit-transition: .3s;
    transition: .3s;
}
.navbar .navbar-nav li a:hover {
    color: #fff;
}
.navbar .navbar-nav li a.active, .navbar .navbar-nav li.active a {
    color: #fff;
}
.navbar .navbar-nav li i {
    line-height: 50px;
    margin: 0 10px;
}
@media (max-width: 992px)  {
    #navbar {
    width: 100%;
    overflow: auto;
}
.navbar .navbar-collapse {
    max-height: none;
}
#navbar .navbar-header {
    height: 50px;
}
#navbar .navbar-toggle {
    margin: 12px 0 0 0;
}
#navbar .navbar-brand, #navbar .navbar-brand i {
    height: 50px;
    line-height: 50px;
}
#navbar .navbar-brand i {
    width: 30px;
    font-size: 30px;
    margin: 0 0px 0 15px;
}
#navbar .fixed-wrapper {
    height: 50px;
}
.navbar .navbar-nav {
    margin: 20px 0;
    width: 100%;
    padding: 0 20px;
}
.navbar .navbar-nav li, .navbar .navbar-nav li a {
    clear: both;
    margin: 0;
    height: auto;
}
.navbar .navbar-nav li i {
    line-height: normal;
}
.navbar .navbar-nav li a {
    line-height: 40px;
}
.navbar .navbar-nav li.dropdown ul.dropdown-menu {
    position: static;
}
#navbar li.dropdown.open a.dropdown-toggle {
    border-bottom: 0;
}
#navbar li.dropdown.open .dropdown-menu {
    border: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}
#navbar li.dropdown.open .dropdown-menu li {
    border: 0;
}
.navbar a.navbar-brand {
    height: 50px;
    padding-right: 5px;
}
.navbar .navbar-collapse.collapse {
    display: none;
}
}
@media (max-width: 767px)  {
    .navbar {
    margin-bottom: 40px;
}
.navbar span.tagline {
    clear: both;
    margin: 0;
}
.navbar .container a.navbar-brand {
    height: 50px;
}
.navbar .navbar-header i {
    font-size: 26px;
    width: 30px;
}
.navbar .navbar-nav {
    padding: 0;
}
.navbar .navbar-nav li a {
    padding: 0 15px;
}
}
.section {
}
body .section.clear {
    background-color: transparent;
}
.section.footer-padding {
    padding-bottom: 80px;
}
.section.bottom {
    margin-bottom: 175px;
}
.section p {
    line-height: 25px;
}
.section p.description {
    text-align: center;
    color: #888;
    font-size: 18px;
    line-height: 36px;
}
.section .container {
    position: relative;
    padding: 100px 0;
    width: 80%;
    background-color: #fcfcfc;
	top: -2px;
}
.section .container.gs {
    position: relative;
    padding: 50px 0;
    width: 80%;
    background-color: #fcfcfc;
	top: -72px;
}
.section .container.gert {
    position: relative;
    padding: 40px 0;
    width: 80%;
    background-color: #fcfcfc;
	top: -90px;
}
.section .container.news {
    position: relative;
    padding: 30px 0 20px;
    width: 80%;
    background-color: #fcfcfc;
	top: 30px;
	border-radius: 2%;
}
.section .container.newd {
    position: relative;
    padding: 100px 0 200px;
    width: 80%;
    background-color: #fcfcfc;
	top: 100px;
}
.section .container.first {
    padding-top: 25px;
}
.section .container.map {
    padding-top: 0;
}
.section .container.single {
    padding: 50px 0;
}
.section .container.last {
    padding-bottom: 0;
}
.section .container.no-bg {
    padding: 0;
    background-color: transparent;
}
.section .container.gray {
    background-color: #ddd;
}
.section .container.clear {
    padding: 80px 0 0 0;
    background-color: transparent;
}
.section .container.subscribe {
    padding: 50px 0px;
    margin-top: 30px;
}
.section .container.subscribe h2 {
    margin: 0;
    line-height: 80px;
    color: #fff;
}
.section .container .content {
    padding: 0 30px;
}
.section .browser-preview {
    padding: 0 20px;
    position: relative;
    width: 100%}
.section .browser-preview img.browser {
    width: 120%;
}
.section .browser-preview img.preview {
    width: 120%;
    -webkit-border-radius: 0 0 0 5px;
    -moz-border-radius: 0 0 0 5px;
    border-radius: 0 0 0 5px;
}
.section .browser-preview.right img.browser, .section .browser-preview.right img.preview {
    float: right;
    clear: both;
}
.section h1, .section h2, .section h3, .section h4, .section h5, .section h6, .section .h1, .section .h2, .section .h3, .section .h4, .section .h5, .section .h6 {
    color: #444;
}
.section h2.title {
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    padding-bottom: 5px;
    display: inline-block;
}
.section h2.title.single {
    margin: 0;
}
.section h2 span {
    color: #0a6117;
    margin-right: 20px;
}
@media (max-width: 992px)  {
    .section .fixed-wrapper h1.affix {
    top: 0;
    left: 0;
}
.section h2 {
    margin: 30px 0 20px 0;
}
}
@media (max-width: 420px)  {
    img.background {
    height: 100%;
}
.section h1 {
    font-size: 30px;
    margin: 18px 0 35px 0;
}
span.logo.glyphicon {
    margin-top: 20px;
}
}
@media (max-width: 767px)  {
    .section .container, .container {
    width: 95%;
}
.section .container {
    padding: 50px 0;
}
.section .container.news {
    padding: 15px 0 10px;
	top: -1px;
	width: 95%;
}
.section .container.newd {
    padding: 50px 0 100px;
	top: 50px;
	width: 95%;
}
.section h2 {
    margin-bottom: 35px;
    text-align: center;
}
.section .content {
    text-align: center;
}
.section .browser-preview {
    padding: 0;
    width: 100%;
}
.section .browser-preview img.preview {
    -webkit-border-radius: 0 0 5px 5px;
    -moz-border-radius: 0 0 5px 5px;
    border-radius: 0 0 5px 5px;
}
.section .container.subscribe {
    padding: 20px 0;
}
.section .container.subscribe h2 {
    font-size: 20px;
}
.section .container.subscribe .btn {
    font-size: 14px;
    margin-bottom: 20px;
}
.section .container.subscribe .row [class*="col-"] {
    margin: 0;
}
img.background {
    background-attachment: scroll;
    position: absolute;
}
}
#home {
    text-align: center;
    padding: 0;
    z-index: 2;
}
#home .row {
    margin: 0;
}
/* ... */

